[package]
name = "luac-parser"
version = "0.1.3"
edition = "2021"
documentation = "https://docs.rs/luac-parser"
license = "MIT"
include = ["/src", "README.md"]
keywords = ['lua', 'bytecode', 'parser']
description = "lua bytecode parser"
repository = "https://github.com/metaworm/luac-parser-rs"

[features]
default = ['rmp-serde']

[dependencies]
log = "0.4"
nom = "7"
nom-supreme = '0.8'
rmp-serde = {version = '1', optional = true}
serde = {version = '1', features = ['derive']}